# hyper-agent

./: .env.example  .gitignore  README.md  next_steps.txt  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-22-near-hyperliquid-agent.md
docs/superpowers/specs/: 2026-05-22-near-hyperliquid-agent-design.md
src/hyper_agent/: __init__.py  backtest.py  cli.py  config.py  daemon.py  executor.py  llm_veto.py  market_data.py  models.py  notifications.py  risk.py  runtime.py  sizing.py  state.py  strategy.py  sweep_env.py  trailing.py  tui.py
src/near_agent/: __init__.py  backtest.py  cli.py  config.py  daemon.py  executor.py  llm_veto.py  market_data.py  models.py  notifications.py  risk.py  runtime.py  sizing.py  state.py  strategy.py  trailing.py
tests/: test_backtest.py  test_cli.py  test_config.py  test_daemon.py  test_executor.py  test_llm_veto.py  test_market_data.py  test_notifications.py  test_risk.py  test_runtime.py  test_sizing.py  test_state.py  test_strategy.py  test_sweep_env.py  test_trailing.py
