[project]
name = "hyper-agent-pkg"
version = "0.1.0"
description = "Multi-symbol Hyperliquid perpetual futures trading daemon"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "httpx>=0.27",
    "textual>=0.70",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.8",
]
live = [
    "hyperliquid-python-sdk>=0.18.0",
    "openai>=1.40",
]

[project.scripts]
hyper-agent = "hyper_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/hyper_agent"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B008", "B905"]
